--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "cviebrock/eloquent-sluggable": "^8.0",
         "doctrine/dbal": "^3.6",
         "fruitcake/laravel-cors": "^2.0",
+        "google/recaptcha": "^1.2",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
